# cc-connect

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROTOCOL.md  README.md  SECURITY.md  TODOS.md  install.sh
.claude/skills/cc-connect-chat/: SKILL.md
.claude/skills/cc-connect-relay-setup/: SKILL.md
.claude/skills/cc-connect-setup/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  vscode-extension-release.yml
chat-ui/: DESIGN.md
chat-ui/src/: ipc.ts  log_tail.ts  main.tsx  mention.test.ts  mention.ts  theme.ts
chat-ui/src/components/: App.tsx  ChatScrollback.tsx  (+3 more)
crates/cc-connect/: Cargo.toml
crates/cc-connect-core/: Cargo.toml
crates/cc-connect-hook/: Cargo.toml
crates/cc-connect-hook/src/: main.rs
crates/cc-connect-mcp/: Cargo.toml
crates/cc-connect-tui/: Cargo.toml
docs/: vscode-extension-design.md
layouts/: bootstrap-prompt.md  cc-connect.tmux.sh  claude-wrap.sh
scripts/: bootstrap.sh  configure-repo.sh
spike/: RESULTS.md
vscode-extension/: .gitignore  .vscodeignore  CLAUDE.md  README.md  package.json  tsconfig.json  tsconfig.webview.json
vscode-extension/docs/: claude-ui-polish.md
vscode-extension/scripts/: probe-sdk.js  probe-sdk.js.map  probe-sdk.ts
vscode-extension/src/: extension.ts
vscode-extension/webview/: Chat.tsx  Claude.tsx  HistoryPicker.tsx  MarkdownContent.tsx  PermissionBubble.tsx  ToolCard.tsx  ToolCardBody.tsx  fileRefs.ts  highlightMentions.tsx  main.tsx  mentionAutocomplete.ts  mentionRules.ts  processClaude.ts  promptWrappers.ts  textareaFocus.ts  types.ts  useStickyScroll.ts
(+51 files in other folders)
