[package]
name = "cc-connect-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Claude Code UserPromptSubmit hook for cc-connect."

[[bin]]
name = "cc-connect-hook"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cc-connect-core = { path = "../cc-connect-core" }
serde.workspace = true
serde_json.workspace = true
